[Refactoring] Accessing Node::m_document should be minimized. https://bugs.webkit.org/show_bug.cgi?id=73800

Reviewed by Kent Tamura.

No new tests. No behavioral change.

Replaced m_document reference with the document() accessor
or temporaril variables. This is a preparation for using
m_document space to point a shadow root pointer.

* dom/Document.h:
(WebCore::Node::Node):
* dom/Node.cpp:
(WebCore::Node::~Node):
* dom/Node.h:
(WebCore::Node::inDocument):

Canonical link: https://commits.webkit.org/90446@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101983 268f45cc-cd09-0410-ab3c-d52691b4dbfc